# experimenteer

./: .gitignore  apikey.gradle  build.gradle  settings.gradle  test.keystore
aaudiotester/: build.gradle
aaudiotester/src/androidTest/java/xyz/velvetmilk/aaudiotester/: ExampleInstrumentedTest.kt
aaudiotester/src/main/: AndroidManifest.xml
aaudiotester/src/main/cpp/: CMakeLists.txt  aaudiolib.cpp
aaudiotester/src/main/java/xyz/velvetmilk/aaudiotester/: AAudioTestingApp.kt  MainActivity.kt
aaudiotester/src/main/java/xyz/velvetmilk/aaudiotester/jni/: AAudioJniLib.kt
aaudiotester/src/main/res/anim/: fade_in.xml  fade_out.xml
aaudiotester/src/main/res/layout/: activity_main.xml
aaudiotester/src/main/res/values/: strings.xml  styles.xml
aaudiotester/src/test/java/xyz/velvetmilk/aaudiotester/: ExampleUnitTest.kt
app/: build.gradle
app/src/androidTest/java/xyz/velvetmilk/testingtool/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  aaudiolib.cpp  antidebugginglib.cpp  attestationlib.cpp  eaveslib.cpp  externallib.cpp  signallib.cpp  testlib.cpp
app/src/main/java/xyz/velvetmilk/testingtool/: AAudioActivity.kt  ActivityCounter.kt  ActivityManagerActivity.kt  ActorActivity.kt  AnimationActivity.kt  AntiDebuggingActivity.kt  AppBarLayoutTestActivity.kt  ApplicationCounter.kt  AttestationActivity.kt  AttestationJNILib.kt  BackgroundCoroutineRunner.kt  BarcodeScannerActivity.kt  BaseActivity.kt  CipherActivity.kt  CollapsingToolbarLayoutTestActivity.kt  ConnectivityActivity.kt  ConstraintBarrierActivity.kt  CoroutineActivity.kt  CryptoActivity.kt  CustomBehavior.kt  DaggerActivity.kt  EavesJNILib.kt  FlowActivity.kt  FocusableActivity.kt  GpsActivity.kt  GzipActivity.kt  InfoActivity.kt  JSONActivity.kt  KeyStoreActivity.kt  KotlinActivity.kt  LocationActivity.kt  MainActivity.kt  MaterialActivity.kt  MaxHeightRecyclerView.kt  NFCActivity.kt  NativeActivity.kt  NetworkActivity.kt  NfcActivity.kt  NotificationActivity.kt  OpenSLESActivity.kt  (+24 more)
app/src/main/java/xyz/velvetmilk/testingtool/concurrency/: CustomActor.kt
app/src/main/java/xyz/velvetmilk/testingtool/di/: ActivityComponent.kt  ActivityModule.kt  ActivityScope.kt  ApplicationComponent.kt  ApplicationModule.kt  ApplicationScope.kt  NetworkModule.kt
app/src/main/java/xyz/velvetmilk/testingtool/jni/: AAudioJniLib.kt  AntiDebuggingJNILib.kt  AntiDebuggingJniLib.kt  AttestationJNILib.kt  AttestationJniLib.kt  EavesJNILib.kt  EavesJniLib.kt  ExternalJniLib.kt  SignalJNILib.kt  SignalJniLib.kt  TestingJNILib.kt  TestingJniLib.kt
app/src/main/java/xyz/velvetmilk/testingtool/models/: CipherResult.kt  DeviceInfoCore.kt  KotlinModel.kt
app/src/main/java/xyz/velvetmilk/testingtool/net/: GzipInterceptor.kt  Packet.kt  (+6 more)
app/src/main/res/anim/: fade_out.xml
app/src/main/res/drawable/: ic_launcher_background.xml  ic_menu.xml  ic_ring_background.xml  ic_ring_inner.xml  ic_ring_outer.xml  ic_ripple.xml
app/src/main/res/drawable-v24/: ic_launcher_foreground.xml
app/src/main/res/layout/: activity_aaudio.xml  activity_activity_manager.xml  activity_actor.xml  activity_animation.xml  activity_antidebugging.xml  activity_appbarlayout.xml  activity_attestation.xml  activity_barcode_scanner.xml  activity_base.xml  activity_cipher.xml  activity_collapsingtoolbarlayout.xml  activity_connectivity.xml  activity_constraint_barrier.xml  activity_coroutine.xml  activity_crypto.xml  activity_dagger.xml  activity_flow.xml  activity_focusable.xml  activity_gps.xml  activity_gzip.xml  activity_hardware_properties.xml  activity_info.xml  activity_job_scheduler.xml  activity_json.xml  activity_keystore.xml  activity_kotlin.xml  activity_location.xml  activity_main.xml  activity_material.xml  activity_media_projection.xml  activity_native.xml  activity_network.xml  activity_nfc.xml  activity_notification.xml  activity_opensles.xml  activity_package.xml  activity_pin_block.xml  activity_play_services.xml  activity_quiet.xml  activity_ripple.xml  (+22 more)
app/src/main/res/menu/: menu_drawer.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
app/src/test/java/xyz/velvetmilk/testingtool/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
vulkantester/: build.gradle
vulkantester/src/androidTest/java/xyz/velvetmilk/vulkantester/: ExampleInstrumentedTest.kt
vulkantester/src/main/: AndroidManifest.xml
vulkantester/src/main/cpp/: CMakeLists.txt  vulkancore.cpp  vulkanlib.cpp
vulkantester/src/main/java/xyz/velvetmilk/vulkantester/: MainActivity.kt
vulkantester/src/main/res/values/: strings.xml
vulkantester/src/test/java/xyz/velvetmilk/vulkantester/: ExampleUnitTest.kt
(+30 files in other folders)
